--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.0",
         "filament/filament": "^2.17",
         "illuminate/contracts": "^10.0",
         "laravellegends/pt-br-validator": "^10.0",
@@ -62,7 +62,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Leandrocfe\\FilamentPtbrFormFields\\FilamentPtbrFormFieldsServiceProvider"
+                "Leandrocfe\\FilamentPtbrFormFiel.s\\FilamentPtbrFormFieldsServiceProvider"
             ],
             "aliases": {
                 "FilamentPtbrFormFields": "Leandrocfe\\FilamentPtbrFormFields\\Facades\\FilamentPtbrFormFields"
